--- a/FallingParticleSimulation/FallingParticleSimulation.vcxproj
+++ b/FallingParticleSimulation/FallingParticleSimulation.vcxproj
@@ -71,8 +71,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\nateb\Documents\Repos\cplusplus\VisualStudioDependencies\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\nateb\Documents\Repos\cplusplus\VisualStudioDependencies\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\nateb\Documents\Repos\cplusplus\VisualStudioDependencies\SDL2_ttf-2.20.2\include;C:\Users\nateb\Documents\Repos\cplusplus\VisualStudioDependencies\SDL2_image-2.8.0\include;C:\Users\nateb\Documents\Repos\cplusplus\VisualStudioDependencies\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\nateb\Documents\Repos\cplusplus\VisualStudioDependencies\SDL2_ttf-2.20.2\lib\x64;C:\Users\nateb\Documents\Repos\cplusplus\VisualStudioDependencies\SDL2_image-2.8.0\lib\x64;C:\Users\nateb\Documents\Repos\cplusplus\VisualStudioDependencies\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -112,7 +112,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -133,6 +133,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="Simulation.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="Simulation.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
