--- a/FallingParticleSimulation/FallingParticleSimulation.vcxproj
+++ b/FallingParticleSimulation/FallingParticleSimulation.vcxproj
@@ -133,6 +133,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GameTiles.cpp" />
+    <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Draw.cpp" />
@@ -143,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="Draw.h" />
     <ClInclude Include="GameTiles.h" />
+    <ClInclude Include="InputHandler.h" />
     <ClInclude Include="Particles.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Math.h" />
