--- a/FallingParticleSimulation/FallingParticleSimulation.vcxproj
+++ b/FallingParticleSimulation/FallingParticleSimulation.vcxproj
@@ -132,6 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Colors.cpp" />
     <ClCompile Include="GameTiles.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="Logger.cpp" />
@@ -144,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="Draw.h" />
     <ClInclude Include="GameTiles.h" />
+    <ClInclude Include="Colors.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="Particles.h" />
     <ClInclude Include="Logger.h" />
