--- a/FallingParticleSimulation/imgui.ini
+++ b/FallingParticleSimulation/imgui.ini
@@ -6,3 +6,11 @@ Size=400,400
 Pos=60,60
 Size=339,111
 
+[Window][Dear ImGui Demo]
+Pos=650,20
+Size=550,680
+
+[Window][Another Window]
+Pos=312,77
+Size=198,71
+
