start setting up imgui window for selecting particles and running sim

--- a/FallingParticleSimulation/imgui.ini
+++ b/FallingParticleSimulation/imgui.ini
@@ -7,10 +7,15 @@ Pos=60,60
 Size=339,111
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=475,16
+Size=550,670
+Collapsed=1
 
 [Window][Another Window]
-Pos=312,77
-Size=198,71
+Pos=283,77
+Size=367,98
+
+[Window][Controls]
+Pos=563,65
+Size=203,122
 
